--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,6 +78,9 @@ jobs:
     - name: Terraform Init
       run: terraform init
 
+    - name: Set output
+      run: echo "::set-output name={name}::{value}"
+
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt -check
