--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./example  # .tf file directory location
+        # working-directory: ./example  # .tf file directory location
 
       - name: Terraform Validate
         run: terraform validate
